adding lint edits to scss

--- a/src/sass/crn_app/_common.progress-bar.scss
+++ b/src/sass/crn_app/_common.progress-bar.scss
@@ -3,8 +3,8 @@
 //progress bar ========================
 
 .progress {
+    @include border-radius(0);
     background: $de;
-    border-radius: 0;
     height: 18px;
     margin: 0;
     padding: 0;
