--- a/src/sass/crn_app/_upload.upload.scss
+++ b/src/sass/crn_app/_upload.upload.scss
@@ -1,441 +1,339 @@
+// .no-chrome {
+//     .right-sidebar {@include blur(2px);}
 
+//     .no-chrome-overlay {
 
-.no-chrome{
-	.right-sidebar{
-		-webkit-filter: blur(2px);
-	    -moz-filter: blur(2px);
-	    -o-filter: blur(2px);
-	    -ms-filter: blur(2px);
-	    filter: blur(2px);
-	}
+//         right: 0;
+//         background: $black;
+//         background-color: rgba(0,0,0,.7);
+//         position: fixed;
+//         height: 100%;
+//         z-index: 9000;
+//         width: 33.3333%;
+//         padding:100px 20px;
+//         text-align: center;
+//         color: #FBFBFB;
+//         font-size: 20px;
+//         line-height: 25px;
+//         text-shadow: 1px 1px 2px #000;
+//         .message {
+//             color:$coral;
+//             &:hover {
+//                 color:lighten($coral, 10%);
+//             }
+//         }
+//     }
+// }
 
-	.no-chrome-overlay{
-
-	    right: 0;
-	    background: #000;
-	    background-color: rgba(0,0,0,.7);
-	    position: fixed;
-	    height: 100%;
-	    z-index: 9000;
-	    width: 33.3333%;
-	    padding:100px 20px;
-	    text-align: center;
-	    color: #FBFBFB;
-	    font-size: 20px;
-	    line-height: 25px;
-	    text-shadow: 1px 1px 2px #000;
-	    .message{
-	    	color:$coral;
-	    	&:hover{
-	    		color:lighten($coral, 10%);
-	    	}
-	    }
-	
-	}
-}
-
-.upload-modal.modal.in{
-	.modal-dialog{
-		padding:0;
-	}
-	.modal-header{
-		background:#f3f3f3;
-	}
-	.modal-body{
-		padding:0;
-	}
+.upload-modal.modal.in {
+    .modal-dialog {padding: 0;}
+    .modal-header {background: $f4;}
+    .modal-body {padding: 0;}
 }
 
 
-.uploader{
-	.message{
-		text-align: center;
-		width: 100%;
-		font-size: 15px;
-		font-weight: 600;
-		color: $rock;
-		max-width: 400px;
-		margin: 0 auto;
-		display: block;
-		padding: 20px;
-		&.error{
-			color:$coral;
-		}
-		&.characterError{
-			padding:0 10px 5px;
-			text-align: center;
-		}
-		.upload-reset-link,
-		.rename-tab-link{
-			color:$primary;
-			cursor: pointer;
-			&:hover{
-				color:$primary-hover;
-			}
-		}
-	}
+.uploader {
+    .message {
+        text-align: center;
+        width: 100%;
+        font-size: 15px;
+        font-weight: 600;
+        color: $rock;
+        max-width: 400px;
+        margin: 0 auto;
+        display: block;
+        padding: 20px;
+
+        &.error {
+            color: $coral;
+        }
+
+        &.character-error {
+            padding: 0 10px 5px;
+            text-align: center;
+        }
+
+        .upload-reset-link,
+        .rename-tab-link {
+            color: $primary;
+            cursor: pointer;
+
+            &:hover {color: $primary-hover;}
+        }
+    }
 
 
-	// commenting out for now - it is hard to 
-	// tell if this was moved to a more generic file. 3/16/16 
-	// if there are no error I will delete this
-	// //Alerts // ================================================================
-	// .alert{
-	//     overflow: hidden;
-	//     position: absolute;
-	//     top: -60px;
-	//     right: 0;
-	//     z-index: 1800;
-	//     margin: 0;
-	//     border-radius: 0;
-	//     background-color: rgba(0,0,0,.8);
-	//     color: #D0D0D0;
-	//     font-weight: 100;
-	//     border: none;
-	//     width: 100%;
-	//     font-size: 18px;
-	//     bottom: 0;
-	// 	&.alert-danger{
-	// 		border-bottom: 1px solid $brand-danger;
-	// 		strong{
-	// 		  color: $brand-danger;
-	// 		  font-weight: 700;
-	// 		  font-family: 'Source Sans Pro', sans-serif;
-	// 		}
-	// 	}
-	// 	&.alert-warning{
-	// 		border-bottom: 1px solid $brand-warning;
-	// 		strong{    
-	// 		  color: $brand-warning;
-	// 		  font-weight: 700;
-	// 		  font-family: 'Source Sans Pro', sans-serif;
-	// 		}
-	// 	}
-	// 	&.alert-success{
-	// 		border-bottom: 1px solid $brand-success;
-	// 		strong{    
-	// 		  color: $brand-success;
-	// 		  font-weight: 700;
-	// 		  font-family: 'Source Sans Pro', sans-serif;
-	// 		}
-	// 	}
-	// 	&.alert-info{
-	// 		border-bottom: 1px solid $brand-info;
-	// 		strong{
-	// 		  color: $brand-info;
-	// 		  font-weight: 700;
-	// 		  font-family: 'Source Sans Pro', sans-serif;
-	// 		}
-	// 	}
+    .dir-name {
+        text-align: center;
+        font-size: 21px;
+        i {margin-right: 10px;}
+        &.has-input {
+            width: 330px;
+            margin: 0 auto;
+            max-width: 100%;
 
+            .add-name {
+                float: left;
+                width: 10%;
+                height: 45px;
+                text-align: right;
+                padding: 10px 8px;
+                background-color: $white;
+                margin: 0;
+                box-shadow: inset 2px 0 5px -1px $transparent1;
+            }
 
-	// 	.alert-left{
-	// 		width: 75%;
-	// 		float: left;
-	// 	}
-	// 	.alert-right{
-	// 		width: 25%;
-	// 		float: left;
-	// 		&.dismiss-button-x{
-	// 			background: none;
-	// 		    border: none;
-	// 		    box-shadow: none;
-	// 		    font-size: 16px;
-	// 		    cursor: pointer;
-	// 		    text-align: right;
-	// 		    &:hover{
-	// 		    	color:$brand-success;
-	// 		    }
-	// 		}
-	// 	}
-	// 	a {
- 
-	// 			color: $brand-warning;
- 
-	// 			&:hover {
- 
-	// 				color: lighten($brand-warning, 10%);
- 
-	// 		}
-	// 	}
-	// }
-	// END
-	// Alerts // ================================================================
-	.dir-name{
-		text-align: center;
-		font-size: 21px;
-		i{
-			margin-right: 10px;
-		}
-		&.has-input{
-			width: 330px;
-		    margin: 0 auto 0;
-		    max-width: 100%;
-			label.add-name{
-			    float: left;
-			    width: 10%;
-			    height: 45px;
-			    text-align: right;
-			    padding: 10px 8px;
-			    background-color: $white;
-			    margin: 0px 0px;
-			    box-shadow: inset 2px 0px 5px -1px rgba(0,0,0,.14);
-				i{}
-			}
-			.form-group{
-				float: left;
-				width: 90%;
-				margin: 0;
-				label{
-					position: absolute;
-					text-align: right;
-					width: 100%;
-					padding: 2px 2%;
+            .form-group {
+                float: left;
+                width: 90%;
+                margin: 0;
 
-				}
-				input{
-					box-shadow: inset -2px 0px 5px -1px rgba(0,0,0,.14);
-					&:focus{
-						outline: none;
-						@include gradient-directional($start-color: $white, $end-color: #fcfcfc, $deg: 85deg);
-						
-					}
-				}
-			}
-			button{
-				font-size: 12px;
-				background-color: rgba(0, 0, 0, 0);
-				border: none;
-				color: $primary;
-				margin: 0 0 0 20px;
-				vertical-align: middle;
-				height: 30px;
-				&:hover{
-					color: $primary-hover;
-				}
-			}
-		}
-	}
-	.uploadProgress-block{
-		margin-top: 0;
-		position:relative;
-		padding:0;
-		
-		border-bottom:1px solid transparent;
-		z-index: 1000;
-		.upload-dirname{
-			text-align: center;
-			display: block;
-			width: 100%;
-			font-size: 21px;
-			label{
-				margin: 0 5px 0 0;
-			}
-		}
-		.uploadFiles-wrap{
-			margin: 10px 0 0;
-		}
-	}
-	.upload-wrap{
-		background:transparent;
-		position:relative;
-		z-index: 1000;
-		.upload-panel {
-			border-radius: 0;
-			border: none;
-			> .panel-heading{
-			 	padding: 0;
-				z-index: 1299;
-				text-transform: uppercase;
-				background-color: rgba(0, 0, 0, 0);
-				padding: 0;
-				position: relative;
-				h4{
-					margin: 0;
-					
-						font-size: 21px;
-						display: block;
-						padding: 18px;
-						background-color: #f4f4f4;
-						color:$ocean;
-						font-family: $font-family-ssp;
-						font-weight:400;
-						 text-decoration: none;
-				}
-			}
-			.panel-body{
-				padding:0;
-				background:#eee;
-			}
-	
-		}
-	}	
+                label {
+                    position: absolute;
+                    text-align: right;
+                    width: 100%;
+                    padding: 2px 2%;
+
+                }
+
+                input {
+                    box-shadow: inset -2px 0 5px -1px $transparent1;
+
+                    &:focus {
+                        @include gradient-directional($start-color: $white, $end-color: $fa, $deg: 85deg);
+                        outline: none;
+                    }
+                }
+            }
+
+            button {
+                font-size: 12px;
+                background-color: $transparent;
+                border: 0;
+                color: $primary;
+                margin: 0 0 0 20px;
+                vertical-align: middle;
+                height: 30px;
+
+                &:hover {
+                    color: $primary-hover;
+                }
+            }
+        }
+    }
+
+    .upload-progress-block {
+        margin-top: 0;
+        position: relative;
+        padding: 0;
+        border-bottom: 1px solid transparent;
+        z-index: 1000;
+
+        .upload-dirname {
+            text-align: center;
+            display: block;
+            width: 100%;
+            font-size: 21px;
+            label {margin: 0 5px 0 0;}
+        }
+
+        .uploadfiles-wrap {margin: 10px 0 0;}
+    }
+
+    .upload-wrap {
+        background: transparent;
+        position: relative;
+        z-index: 1000;
+        .upload-panel {
+            border-radius: 0;
+            border: 0;
+
+            > .panel-heading {
+                padding: 0;
+                z-index: 1299;
+                text-transform: uppercase;
+                background-color: $transparent;
+                position: relative;
+
+                h4 {
+                    margin: 0;
+                    font-size: 21px;
+                    display: block;
+                    padding: 18px;
+                    background-color: $f4;
+                    color: $ocean;
+                    font-family: $font-family-ssp;
+                    font-weight: 400;
+                    text-decoration: none;
+                }
+            }
+
+            .panel-body {
+                padding: 0;
+                background: $eee;
+            }
+        }
+    }
 }
 
 
-.activePane-2,
-.activePane-3,
-.activePane-4{
-	.btn-blue{
-		width: 100%;
-		max-width: 200px;
-		display: block;
-		margin:0 auto 30px;
-	}
-}
-.activePane-3{
-	.btn-blue{
-		margin:20px auto 0px;
-	}
+.active-pane-2,
+.active-pane-3,
+.active-pane-4 {
+    .file-structure.panel-group .panel-default .panel-heading { text-align: center;}
+
+    .btn-blue {
+        width: 100%;
+        max-width: 200px;
+        display: block;
+        margin: 0 auto 30px;
+    }
 }
 
-.activePane-5{
-	padding:30px 50px; 
+.active-pane-3 {
+    .btn-blue {margin: 20px auto 0;}
 }
-.activeTab-1,
-.activeTab-2,
-.activeTab-3,
-.activeTab-4,
-.activeTab-5{
-	height: 45px;
-	width: 20%;
-	background:#BFBFBF;
-	transition:margin-left 0.3s ease;
+
+.active-pane-5 {padding: 30px 50px;}
+
+.active-tab-1,
+.active-tab-2,
+.active-tab-3,
+.active-tab-4,
+.active-tab-5 {
+    height: 45px;
+    width: 20%;
+    background: $bbb;
+    transition: margin-left .3s ease;
     margin-top: -40px;
     border-bottom: 5px solid $sky;
-	@media (max-width: 1428px) {
-		margin-top: -60px;
-		height: 65px;
-	}
+
+    @media (max-width: 1428px)  {
+        margin-top: -60px;
+        height: 65px;
+    }
 }
 
 
-.activeTab-2{
-	margin-left:20%;
-}
-.activeTab-3{
-	margin-left:40%;
-}
-.activeTab-4{
-	margin-left:60%;
-}
-.activeTab-5{
-	margin-left:80%;
+.active-tab-2 {margin-left: 20%;}
+.active-tab-3 {margin-left: 40%;}
+.active-tab-4 {margin-left: 60%;}
+.active-tab-5 {margin-left: 80%;}
+
+.upload-steps {
+    margin: 0;
+    border: 0;
+    background: $d9;
+
+    .upload-step,
+    .upload-step.active {
+        border: 0;
+        margin: 0;
+        width: 20%;
+        text-align: center;
+        font-size: 12px;
+
+        a {
+            border-radius: 0;
+            background-color: transparent;
+            color: lighten($ocean, 10%);
+            font-size: 14px;
+            border-right: 1px solid $transparent1;
+            letter-spacing: 0;
+
+            &:hover {
+                background-color: $transparent;
+                color: $ocean;
+            }
+
+            @media (max-width: 1428px) {span {display: block;}}
+        }
+
+    }
+
+    .upload-step {
+        .panel-heading {
+            margin: 0;
+            padding: 0;
+            border: 0;
+            border-radius: 0;
+
+            .panel-title a {
+                padding: 10px;
+                display: block;
+                background-color: $c-66;
+                color: $misty;
+                border-bottom: 1px solid $c-66;
+                transition: all .3s ease;
+
+                &.collapsed {
+                    background-color: $eee;
+                    color: $c-66;
+                    border-bottom: 1px solid $transparent;
+                }
+            }
+        }
+
+        .tab-content {
+            padding: 10px 30px 20px;
+
+            .tab-pane {border-top: 0;}
+        }
+    }
+
+    &.active.step5 {float: right;}
+
+    &.disabled {
+        a {
+            cursor: default;
+            color: $c-77;
+
+            &:hover {
+                background-color: $transparent;
+                color: $c-77;
+            }
+        }
+    }
 }
 
-ul.upload-steps{
-	margin: 0;
-	border: none;
-	background:#D7D7D7;
-	
-	li.upload-step,
-	li.upload-step.active{
-		border: none;
-	    margin: 0;
-	    width: 20%;
-	    text-align: center;
-	    font-size: 12px;
-
-	
-		a{
-			border-radius: 0;
-			background-color: transparent;
-			color: lighten($ocean, 10%);
-			font-size: 14px;
-			border-right:1px solid rgba(0,0,0,0.1);
-			letter-spacing: 0;
-			&:hover{
-				background-color:transparent;
-				color:$ocean;
-			}
-			@media (max-width: 1428px) {
-				span {display: block;}	 
-			}
-		}
-
-	}
-	li.upload-step.active.step5{
-		float: right;
-	}
-	li.upload-step.disabled{
-		a{
-			cursor: default;
-			color:#787878;
-			&:hover{
-				background-color:transparent;
-				color:#787878;
-			}
-		}
-	}
-
-	div.upload-step{
-		.panel-heading{
-			margin: 0;
-			padding: 0;
-			border: none;
-			border-radius: 0;
-			h4.panel-title a{
-			    padding: 10px;
-			    display: block;
-			    background-color: #666;
-			    color: $misty;
-			    border-bottom: 1px solid #666;
-			    transition: all 0.3s ease;
-			    &.collapsed{
-			    background-color: #eee;
-			    color: #666;
-			    border-bottom: 1px solid transparent;
-			    }
-			}
-		}
-		.tab-content{
-			padding: 10px 30px 20px;
-			.tab-pane{
-				border-top:none;
-			}
-		}
-	}
+.error-log {
+    border: 0;
+    border-color: $transparent;
+    box-shadow: none;
+    margin: 20px 0;
+    border-radius: 0;
+    font-size: 12px;
+    text-align: center;
+    display: block;
+    color: $primary;
+    background-color: $transparent;
+    &:hover {color: $primary-hover;}
 }
-a.error-log{
-	border:none;
-	border-color: rgba(0, 0, 0, 0);
-	box-shadow: none;
-	margin: 20px 0;
-	text-align: center;
-	border-radius: 0;
-	font-size: 12px;
-	text-align: center;
-	display: block;
-	color:$primary;
-	background-color: transparent;
-	&:hover{
-		color: $primary-hover;
-	}
-}
-.bids-link{
-	text-align: center;
-	width: 100%;
-	display: block;
-	margin: 10px 0;
+
+.bids-link {
+    text-align: center;
+    width: 100%;
+    display: block;
+    margin: 10px 0;
     padding: 0;
-    color: #686868;
+    color: $c-66;
     font-size: 12px;
 }
 
 //UPLOAD display
-.uploading.right-sidebar{
+.uploading.right-sidebar {
 
-	.message{
-		text-align: left;
-		color: $turquoise;
-		text-transform: lowercase;
-		font-size: 12px;
-		margin: 5px 0;
+    .message {
+        text-align: left;
+        color: $turquoise;
+        text-transform: lowercase;
+        font-size: 12px;
+        margin: 5px 0;
+    }
 
-	}
-	.dir-name{
-		text-align: left;
-		margin-top: 0;
-	}
+    .dir-name {
+        text-align: left;
+        margin-top: 0;
+    }
 }
 
