--- a/src/sass/crn_app/_admin.admin.scss
+++ b/src/sass/crn_app/_admin.admin.scss
@@ -1,4 +1,3 @@
-
 .admin {
     .dashboard-dataset-teasers {
         padding-bottom: 0;
@@ -54,8 +53,8 @@
 
         .user-panel,
         .user-panel-header {
+            @include border-radius(0);
             margin: 0 -15px;
-            border-radius: 0;
             border: 0;
             border-top: 1px solid $e1;
             box-shadow: none;
