--- a/src/sass/crn_app/_common.modals.scss
+++ b/src/sass/crn_app/_common.modals.scss
@@ -136,13 +136,13 @@
                 transition: color 250ms cubic-bezier(.4, .0, .23, 1);
 
                 > span {
+                    @include border-radius(1px);
                     display: block;
                     margin-right: 0;
                     width: auto;
                     height: auto;
                     background: $transparent;
                     border: 2px solid $c-9e;
-                    border-radius: 1px;
                     cursor: pointer;
                     transition: all 250ms cubic-bezier(.4, 0, .23, 1);
                     padding: 8px;
@@ -169,15 +169,14 @@
             &:checked + label {
 
                 > span {
+                    @include animation(shrink-bounce 200ms cubic-bezier(.4, .0, .23, 1));
                     border: 2px solid lighten($brand-success, 10%);
                     background: lighten($brand-success, 10%);
                     color: $white;
-                    -webkit-animation: shrink-bounce 200ms cubic-bezier(.4, .0, .23, 1);
-                    -moz-animation: shrink-bounce 200ms cubic-bezier(.4, .0, .23, 1);
-                    animation: shrink-bounce 200ms cubic-bezier(.4, .0, .23, 1);
                     overflow: hidden;
 
                     &::before {
+                        @include animation(checkbox-check 125ms 250ms cubic-bezier(.4, .0, .23, 1) forwards);
                         content: '';
                         position: absolute;
                         top: .3em;
@@ -186,9 +185,6 @@
                         border-bottom: 3px solid transparent;
                         transform: rotate(45deg);
                         transform-origin: 0% 100%;
-                        -webkit-animation: checkbox-check 125ms 250ms cubic-bezier(.4, .0, .23, 1) forwards;
-                        -moz-animation: checkbox-check 125ms 250ms cubic-bezier(.4, .0, .23, 1) forwards;
-                        animation: checkbox-check 125ms 250ms cubic-bezier(.4, .0, .23, 1) forwards;
                         padding: 5px 2px;
                     }
                 }
@@ -212,16 +208,7 @@
     z-index: 1500;
 }
 
-.modal-open {
-
-    #main {
-        -webkit-filter: blur(5px);
-        -moz-filter: blur(5px);
-        -o-filter: blur(5px);
-        -ms-filter: blur(5px);
-        filter: blur(5px);
-    }
-}
+.modal-open #main {@include blur(5px);}
 
 .modal-backdrop {
     background: $transparent3;
@@ -244,15 +231,15 @@
     }
 
     .modal-dialog {
+        @include border-radius(0);
         width: 700px;
         margin: 0 auto;
         padding: 0 0 20px;
-        border-radius: 0;
         background-color: $white;
         box-shadow: 0 3px 8px $transparent5;
 
         .modal-content {
-            border-radius: 0;
+            @include border-radius(0);
             border: 0;
             width: 100%;
             box-shadow: none;
