--- a/src/sass/crn_app/_common.pagination.scss
+++ b/src/sass/crn_app/_common.pagination.scss
@@ -15,7 +15,7 @@
 
             a,
             span {
-                border-radius: 0;
+                @include border-radius(0);
             }
         }
 
@@ -23,17 +23,13 @@
 
             a,
             span {
+                @include transition(all .3s ease-out);
                 background: darken($sky, 10%);
-                -webkit-transition: all .3s ease-out;
-                -moz-transition: all .3s ease-out;
-                transition: all .3s ease-out;
                 color: $white;
 
                 &:hover {
+                    @include transition(all .3s ease-out);
                     background: darken($sky, 10%);
-                    -webkit-transition: all .3s ease-out;
-                    -moz-transition: all .3s ease-out;
-                    transition: all .3s ease-out;
                     color: $white;
                 }
             }
