--- a/src/sass/crn_app/_common.spinner.scss
+++ b/src/sass/crn_app/_common.spinner.scss
@@ -2,43 +2,40 @@
 .loading-wrap {
     padding: 20px 0 30px;
     text-align: center;
-    position:relative;
+    position: relative;
+
     span {
         text-transform: uppercase;
         margin-top: 5px;
         display: block;
-        font-size:12px;
+        font-size: 12px;
         color: $turquoise;
     }
+
     .spinner,
     .spinnerinner {
+        @include border-radius(50%);
+        @include box-sizing(border-box);
         position: relative;
         border: 4px solid $turquoise;
         border-color: transparent $turquoise;
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        -webkit-border-radius: 50%;
-        -moz-border-radius: 50%;
-        border-radius: 50%;
         width: 45px;
         height: 45px;
         padding: 0;
         margin: 0;
     }
 
-
-
     .spinner {
-        animation: spin 4s linear 0s infinite normal;
+        @include animation(spin 4s linear 0s infinite normal);
         margin: 0 auto;
     }
 
     .spinnerinner {
+        @include animation(spin 1s linear 0s infinite normal);
+        @include border-radius(50%);
         border-width: 2px;
         margin: 21%;
         padding: 0;
-        border-radius: 50%;
         position: absolute;
         top: 0;
         bottom: 0;
@@ -47,15 +44,5 @@
         display: block;
         width: 60%;
         height: 60%;
-        animation: innerspin  1s linear 0s infinite normal;
     }
-}
-
-@keyframes  spin {
-    from { -webkit-transform: rotate(0) }
-    to { -webkit-transform: rotate(360deg) }
-}
-@keyframes  innerspin {
-    from { -webkit-transform: rotate(0) }
-    to { -webkit-transform: rotate(360deg) }
 }
