--- a/src/sass/crn_app/_common.typeahead.scss
+++ b/src/sass/crn_app/_common.typeahead.scss
@@ -1,30 +1,31 @@
 .typeahead {
-	position: relative;
-	display: inline;
-	input {
-		padding: 4px 10px;
-		margin: 5px 0;
-	}
+    position: relative;
+    display: inline;
 
-	.typeahead-results {
-		position: absolute;
-		background: $white;
-		list-style: none;
-		padding: 0;
-		box-shadow: 1px 1px 5px -2px $transparent5;
-		min-width: 300px;
-		max-height:300px;
-		overflow:hidden;
-		overflow-y: scroll;
+    input {
+        padding: 4px 10px;
+        margin: 5px 0;
+    }
 
-		li {
-			border-top: 1px solid $ccc;
-			padding: 15px;
-			cursor: pointer;
+    .typeahead-results {
+        position: absolute;
+        background: $white;
+        list-style: none;
+        padding: 0;
+        box-shadow: 1px 1px 5px -2px $transparent5;
+        min-width: 300px;
+        max-height: 300px;
+        overflow: hidden;
+        overflow-y: scroll;
 
-			&:first-child {border: none;}
-			&:hover {background: $eee;}
-			&:active {background: $ddd;}
-		}
-	}
+        li {
+            border-top: 1px solid $ccc;
+            padding: 15px;
+            cursor: pointer;
+
+            &:first-child {border: 0;}
+            &:hover {background: $eee;}
+            &:active {background: $ddd;}
+        }
+    }
 }
