--- a/src/sass/crn_app/_dataset.dataset.scss
+++ b/src/sass/crn_app/_dataset.dataset.scss
@@ -1,71 +1,79 @@
 .dataset {
-	.dataset-wrap {
-		padding-top:35px;
-		h1 {
-			margin: 0 0 15px;
-			padding: 0;
-			text-transform: uppercase;
-			font-weight: 100;
-			font-family: 'Cabin', sans-serif;
-			font-size: 16px;
-			.nav.nav-pills {
-				float: left;
-			}
-			 
-			 .form-group {
-				margin: 0;
-				.cte-display {
-				 	font-size: 30px;
-				 }
-				.cte-edit {    
-				 	margin: 10px 0;
-				}
-			}
-		}
-		h6 {margin:5px 0 0;}
-		.dataset-readme {
-			margin-top: 20px;
-			.description-item {
-				padding-bottom:10px;
-				margin-bottom: 10px;
-				//border-bottom:2px solid #eee;
-				.form-group {
-					margin: 0;
-					.cte-display {
-						border-bottom:1px solid $eee;
-						padding:10px;
-					}
-					.cte-edit {
-						border-bottom:1px solid $eee;
-						.cte-edit-array {
-							margin-bottom: 10px;
-						}
-					}
-					label {
-					    font-size: 18px;
-					    color: $c-42;
-					    line-height: 21px;
-					    padding: 0;
-					}
-					input {}
-					textarea,
-					textarea.form-control {
-						min-height: 300px;
-					}
-				}
-				.float-label-input label {
-					font-size: 10px;
-					padding-right: 5px;
-				}
-				.file-name-link {
-					i {
-						font-size: 13px;
-					}
-				}
-			}
-		}
-		
-	}
+    .dataset-wrap {
+        padding-top: 35px;
+
+        h1 {
+            margin: 0 0 15px;
+            padding: 0;
+            text-transform: uppercase;
+            font-weight: 100;
+            font-family: 'Cabin', sans-serif;
+            font-size: 16px;
+
+            .nav.nav-pills {
+                float: left;
+            }
+
+            .form-group {
+                margin: 0;
+
+                .cte-display {font-size: 30px;}
+                .cte-edit {margin: 10px 0;}
+            }
+        }
+
+        h6 {margin: 5px 0 0;}
+
+        .dataset-readme {
+            margin-top: 20px;
+
+            .description-item {
+                padding-bottom: 10px;
+                margin-bottom: 10px;
+                //border-bottom:2px solid #eee;
+                .form-group {
+                    margin: 0;
+
+                    .cte-display {
+                        border-bottom: 1px solid $eee;
+                        padding: 10px;
+                    }
+
+                    .cte-edit {
+                        border-bottom: 1px solid $eee;
+
+                        .cte-edit-array {
+                            margin-bottom: 10px;
+                        }
+                    }
+
+                    label {
+                        font-size: 18px;
+                        color: $c-42;
+                        line-height: 21px;
+                        padding: 0;
+                    }
+
+                    textarea,
+                    textarea.form-control {
+                        min-height: 300px;
+                    }
+                }
+
+                .float-label-input label {
+                    font-size: 10px;
+                    padding-right: 5px;
+                }
+
+                .file-name-link {
+                    i {
+                        font-size: 13px;
+                    }
+                }
+            }
+        }
+
+    }
 }
 
 
