--- a/src/sass/crn_app/_dataset.file-tree.scss
+++ b/src/sass/crn_app/_dataset.file-tree.scss
@@ -1,84 +1,88 @@
 //File structure  accordion
 .file-structure.panel-group {
     margin: 5px 0 10px;
-    border: none;
+    border: 0;
+
     .panel-default {
-        background:none;
-        border: none;
+        @include border-radius(0);
+        background: none;
+        border: 0;
         box-shadow: none;
         padding: 0;
-        border-radius:0;
+
         .panel-heading {
-            border:none;
+            @include border-radius(0);
+            border: 0;
             border-color: $transparent;
             box-shadow: none;
             margin: 0;
             padding: 5px 0;
-            text-align: center;
-            border-radius: 0;
-            background-color: transparent;     
+            background-color: transparent;
+            text-align: left;
+
             .panel-title {
-                font-size: 10px;
-                color:$aaa;
-                
+                color: $aaa;
+                font-size: 13px;
+                padding: 0;
+
                 a {
                     text-decoration: none;
-                    color:$primary;
+                    color: $primary;
                     background: none;
                     margin: 0;
                     padding: 0 0 20px;
-                    border-color:transparent;
-                    &::before {
-                        content:'Hide ';
-                    }
-                    &.collapsed {
-                        &::before {
-                            content:'View ';
-                        }
-                    }
+                    border-color: transparent;
+
+                    &::before {content: 'Hide ';}
+                    &.collapsed::before {content: 'View ';}
+
                     &:hover {
-                      text-decoration: none;
-                      color:$primary-hover;
-                  }
-              }
-          }
-      }
-      .panel-collapse{
-        margin-top: 0px;
-        .panel-body{
-            border-top: 1px solid transparent;
-            color:#5c5c5c;
-            ul{
-                list-style: disc;
-                padding-left: 5px;
-                font-size: 11px;
-                list-style-position: inside;
+                        text-decoration: none;
+                        color: $primary-hover;
+                    }
+                }
             }
-            > ul{
-                list-style: none;
-                margin: 0;
-                padding-left:5px;
-                overflow: hidden;
-                overflow-y: scroll;
-                height: 170px;
-                border: 1px solid #ddd;
-                margin: 5px;
+        }
+
+        .panel-collapse {
+            margin-top: 0;
+
+            .panel-body {
+                border-top: 1px solid transparent;
+                color: $c-56;
+
+                ul {
+                    list-style: disc;
+                    padding-left: 5px;
+                    font-size: 11px;
+                    list-style-position: inside;
+                }
+
+                > ul {
+                    list-style: none;
+                    padding-left: 5px;
+                    overflow: hidden;
+                    overflow-y: scroll;
+                    height: 170px;
+                    border: 1px solid $ddd;
+                    margin: 5px;
+                }
             }
         }
     }
 }
-}
 
-.dataset .dataset-wrap{
-    .file-structure.panel-group{
-        .panel-default{
+.dataset .dataset-wrap {
+    .file-structure.panel-group {
+        .panel-default {
             .type-icon {
                 background: none;
-                border: none;
+                border: 0;
             }
-            .panel-heading .panel-title{
+
+            .panel-heading .panel-title {
                 font-size: 18px;
-                color: #424242;
+                color: $c-42;
                 line-height: 21px;
                 padding: 0;
                 display: inline-block;
@@ -86,23 +90,26 @@
                 margin-bottom: 5px;
                 font-family: 'Cabin', sans-serif;
             }
-            .panel-body{
-                padding:0;
-                ul{
+
+            .panel-body {
+                padding: 0;
+
+                ul {
                     padding: 0;
-                    position:relative;
-                    li{
-                        position:relative;
-                        .cte-edit-button{
-                            position:absolute;
+                    position: relative;
+
+                    li {
+                        position: relative;
+
+                        .cte-edit-button {
+                            position: absolute;
                             top: 5px;
-                            right:5px;
+                            right: 5px;
                         }
                     }
                 }
 
-
-                >ul{
+                >ul {
                     overflow: visible;
                     height: auto;
                     padding: 10px;
@@ -112,20 +119,17 @@
                         padding: 3px 0 3px 10px;
                         list-style: none;
                         margin: 2px;
-                        .child-files{
+
+                        .child-files {
                             margin-left: 5px;
-                            border-left: 1px solid #999;
-                            li{
-                                background:$white;
-                                &:nth-child(odd){
-                                    background:#f9f9f9;
-                                }
-                                .message.error{
-                                    color:$coral;
-                                }
-                                .fa-times{
-                                    cursor: pointer;
-                                }
+                            border-left: 1px solid $c-9e;
+
+                            li {
+                                background: $white;
+
+                                &:nth-child(odd) {background: $f9;}
+                                .message.error {color: $coral;}
+                                .fa-times {cursor: pointer;}
                             }
 
                             li::before {
@@ -133,7 +137,7 @@
                                 height: 7px;
                                 width: 7px;
                                 background: none;
-                                border-bottom: 1px solid #999;
+                                border-bottom: 1px solid $c-9e;
                                 margin-left: -11px;
                                 position: absolute;
                                 margin-top: 3px;
@@ -142,22 +146,13 @@
                     }
                 }
 
-                .fileTreeEditFile{
+                .filetree-editfile {
                     height: 20px;
                     float: none;
                     width: 100%;
                     display: block;
-                    margin:5px 0 0px;
+                    margin: 5px 0 0;
                 }
-
-
-            }
-        }
-        .panel-default .panel-heading{
-            text-align: left;
-            .panel-title a{
-                font-size: 13px;
-                padding:0;
             }
         }
     }
