--- a/src/sass/crn_app/_nav.left_navbar.scss
+++ b/src/sass/crn_app/_nav.left_navbar.scss
@@ -1,89 +1,96 @@
 
 // left flyout nav
-.left-nav{
-	padding: 0;
-	position: fixed;
-	left: 0;
-	height: 100%;
-	z-index: 1300;
-	.show-nav-btn{
-		display: block;
-		width: 60px;
-		font-size: 12px;
-		text-align: center;
-		margin: 5px 0;
-		cursor:pointer;
-		color: $white;
-	}
-	.left-nav-slider{
-		z-index: 1200;
-		background-color: #555;
-		border-right:1px solid #555;
-		display: block;
-		z-index: 1100;
-		position: relative;
-		height: 100%;
-		overflow: hidden;
-		transition: all 0.5s ease;
-		width: 65px;
-		padding: 0;
-		ul{
-			padding:0;
-			margin: 0;
-			list-style: none;
-			width: 360px;
-			a{
-				padding: 0px 7px 2px;
-				font-size: 38px;
-				background-color: transparent;
-				color:$misty;
-				width: 100%;
-				display: block;
-				text-decoration: none;
-				border-bottom:1px solid #999;
-				transition: background 0.4s ease;
-				i{
-					border-right: 1px solid #bbb;
-					padding: 20px 10px 10px 2px;
-					width: 60px;
-					text-align: center;
-					font-size: 32px;
-					margin: 0;
-					position: relative;
-					height: 70px;
-				}
-				.link-name{
-					font-size: 19px;
-					padding: 0 18px 0;
-					text-transform: uppercase;
-					display: inline-block;
-					position: relative;
-					top: -5px;
-				}
-				&:hover{
-					text-decoration: none;
-					background:rgba(255,255,255, 0.07);
-					color: $white;
-				}
-				&.active{
-					background-color: $stanford-red;
-					//@include gradient-vertical($start-color: $ocean, $end-color:lighten($ocean, 5%), $start-percent: 40%, $end-percent: 100%);
-					box-shadow:inset 0 0 5px rgba(0,0,0,0.5);
+.left-nav {
+    padding: 0;
+    position: fixed;
+    left: 0;
+    height: 100%;
+    z-index: 1300;
 
-					color:$white;
-					i{
-						border-right:1px solid darken(#00505c, 5%);
-					}
-				}
-			}
+    .show-nav-btn {
+        display: block;
+        width: 60px;
+        font-size: 12px;
+        text-align: center;
+        margin: 5px 0;
+        cursor: pointer;
+        color: $white;
+    }
 
-		}
-	}
-	.open{
-		.left-nav-slider{
-			box-shadow: 1px 1px 3px -1px rgba(0, 0, 0, 1);
-			border:none;
-			width: 350px;
-		}
-	}
+    .left-nav-slider {
+        z-index: 1200;
+        background-color: $c-56;
+        border-right: 1px solid $c-56;
+        display: block;
+        position: relative;
+        height: 100%;
+        overflow: hidden;
+        transition: all .5s ease;
+        width: 65px;
+        padding: 0;
+
+        ul {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            width: 360px;
+
+            a {
+                padding: 0 7px 2px;
+                font-size: 38px;
+                background-color: transparent;
+                color: $misty;
+                width: 100%;
+                display: block;
+                text-decoration: none;
+                border-bottom: 1px solid $c-9e;
+                transition: background .4s ease;
+
+                i {
+                    border-right: 1px solid $bbb;
+                    padding: 20px 10px 10px 2px;
+                    width: 60px;
+                    text-align: center;
+                    font-size: 32px;
+                    margin: 0;
+                    position: relative;
+                    height: 70px;
+                }
+
+                .link-name {
+                    font-size: 19px;
+                    padding: 0 18px;
+                    text-transform: uppercase;
+                    display: inline-block;
+                    position: relative;
+                    top: -5px;
+                }
+
+                &:hover {
+                    text-decoration: none;
+                    background: $transparent1;
+                    color: $white;
+                }
+
+                &.active {
+                    background-color: $stanford-red;
+                    //@include gradient-vertical($start-color: $ocean, $end-color:lighten($ocean, 5%), $start-percent: 40%, $end-percent: 100%);
+                    box-shadow: inset 0 0 5px $transparent5;
+
+                    color: $white;
+
+                    i {border-right: 1px solid darken($ocean, 5%);}
+                }
+            }
+
+        }
+    }
+
+    .open {
+        .left-nav-slider {
+            box-shadow: 1px 1px 3px -1px $transparent1;
+            border: 0;
+            width: 350px;
+        }
+    }
 }
